@@ -251,6 +251,7 @@ S3method(plot, mantel.correlog)
 S3method(plot, meandist)
 S3method(plot, metaMDS)
 S3method(plot, monoMDS)
+S3method(plot, nestednodf)
 S3method(plot, nestedtemp)
 S3method(plot, ordisurf)
 S3method(plot, orditkplot)
