@@ -4,6 +4,9 @@ VEGAN RELEASE VERSIONS at http://cran.r-project.org/
 
 Version 2.0-6 (opened October 8, 2012)
 
+	* merge 2336: stricter monoMDS convergence criteria.
+	* merge 2334,5: scores.monoMDS,metaMDS updates.
+	* merge 2332: add plot.nestednodf().
 	* merge 2330,1: ordiR2step() gained arg 'R2scope' and handles
 	partial RDA.
 	* merge 2328,9: add 'legend' arg to msoplot().
